--- a/src/main/resources/templates/userAdminInfo.html
+++ b/src/main/resources/templates/userAdminInfo.html
@@ -35,7 +35,10 @@
     <div class="row">
         <div class="col-2 bg-light vh-100">
             <div class="d-flex flex-column p-3">
-                <button type="button" class="btn btn-primary">User</button>
+                <a href="/admin" class="btn btn-primary" role="button">Admin</a>
+            </div>
+            <div class="d-flex flex-column p-3">
+                <a href="/admin/user" class="btn btn-primary" role="button">User</a>
             </div>
         </div>
 
