--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,71 +1,199 @@
-<!DOCTYPE html>
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Page</title>
+    <title>Admin panel</title>
+
     <!-- Логотип -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-text text-white">
+            <b th:text="${user.username}"></b> with roles: <span th:text="${user.getAllUserRoles()}"></span>
+        </span>
+        <form th:action="@{/logout}" method="post" class="d-inline">
+            <button type="submit" class="btn btn-dark">Logout</button>
+        </form>
+    </div>
+</nav>
 
-<div class="container mt-4">
-    <h1 class="mb-4">Users List</h1>
-    <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Username</th>
-            <th>Surname</th>
-            <th>Age</th>
-            <th>Email</th>
-            <th>Roles</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user : ${users}">
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.username}"></td>
-            <td th:text="${user.surname}"></td>
-            <td th:text="${user.age}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.getAllUserRoles()}"></td>
-            <td>
-                <form th:action="@{/admin/edit}" method="post" style="display:inline;">
-                    <input type="hidden" name="id" th:value="${user.id}"/>
-                    <button type="submit" class="btn btn-warning btn-sm">Edit</button>
-                </form>
-                <form th:action="@{/admin/delete/}" method="post" style="display:inline;">
-                    <input type="hidden" name="id" th:value="${user.id}"/>
-                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                </form>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 bg-light vh-100">
+            <div class="d-flex flex-column p-3">
+                <a href="/admin" class="btn btn-primary" role="button">Admin</a>
+            </div>
+            <div class="d-flex flex-column p-3">
+                <a href="/admin/user" class="btn btn-primary" role="button">User</a>
+            </div>
+        </div>
 
-    <!-- Кнопки для действий -->
-    <div class="mt-3">
-        <form th:action="@{/admin/new/}" method="get" style="display:inline;">
-            <button type="submit" class="btn btn-primary btn-sm">Add new User</button>
-        </form>
-        <form th:action="@{/logout}" method="post" style="display:inline;">
-            <button type="submit" class="btn btn-secondary btn-sm">LogOut</button>
-        </form>
-        <form th:action="@{/user}" method="get" style="display:inline;">
-            <button type="submit" class="btn btn-info btn-sm">Show my info</button>
-        </form>
+        <div class="col-10">
+            <div class="container mt-4">
+                <h1 class="mb-4">Admin panel</h1>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="bg-light card-title">About user</h5>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Username</th>
+                                    <th>Surname</th>
+                                    <th>Age</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.id}"></td>
+                                    <td th:text="${user.username}"></td>
+                                    <td th:text="${user.surname}"></td>
+                                    <td th:text="${user.age}"></td>
+                                    <td th:text="${user.email}"></td>
+                                    <td th:text="${user.getAllUserRoles()}"></td>
+                                    <td>
+                                        <button class="btn btn-primary" data-bs-toggle="modal"
+                                                data-bs-target="#editUserModal">Edit
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-danger" data-bs-toggle="modal"
+                                                data-bs-target="#deleteUserModal">Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
-<!-- Подключаем JavaScript для Bootstrap (для использования компонентов, таких как модальные окна и т.д.) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Edit User Modal -->
+<div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form th:method="POST" th:action="@{/admin/update(id=${user.id})}" th:object="${user}">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">First name</label>
+                        <input type="text" th:field="*{username}" id="name" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastName" class="form-label">Last name</label>
+                        <input type="text" th:field="*{surname}" id="lastName" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="age" class="form-label">Age</label>
+                        <input type="number" th:field="*{age}" id="age" class="form-control" min="0" max="120" step="1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" th:field="*{email}" id="email" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" th:field="*{password}" id="password" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="roles" class="form-label">Role</label>
+                        <select name="role" class="form-select" multiple id="roles" style="height: 100px;">
+                            <option value="1">ADMIN</option>
+                            <option value="2">USER</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Edit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Delete User Modal -->
+<div class="modal fade" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteUserModalLabel">Delete User</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form th:method="POST" th:action="@{/admin/delete/(id=${user.id})}" th:object="${user}">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">First name</label>
+                        <input type="text" th:field="*{username}" id="name" class="form-control" disabled>
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastName" class="form-label">Last name</label>
+                        <input type="text" th:field="*{surname}" id="lastName" class="form-control" disabled>
+                    </div>
+                    <div class="mb-3">
+                        <label for="age" class="form-label">Age</label>
+                        <input type="number" th:field="*{age}" id="age" class="form-control" min="0" max="120" step="1"
+                               disabled>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" th:field="*{email}" id="email" class="form-control" disabled>
+                    </div>
+                    <div class="mb-3">
+                        <label for="roles" class="form-label">Role</label>
+                        <select name="role" class="form-select" multiple id="roles" style="height: 100px;" disabled>
+                            <option value="1">ADMIN</option>
+                            <option value="2">USER</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Кнопки для действий -->
+<div class="mt-3">
+    <form th:action="@{/admin/new/}" method="get" style="display:inline;">
+        <button type="submit" class="btn btn-primary btn-sm">Add new User</button>
+    </form>
+    <form th:action="@{/logout}" method="post" style="display:inline;">
+        <button type="submit" class="btn btn-secondary btn-sm">LogOut</button>
+    </form>
+    <form th:action="@{/user}" method="get" style="display:inline;">
+        <button type="submit" class="btn btn-info btn-sm">Show my info</button>
+    </form>
+</div>
+</div>
 </body>
 </html>
