--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -45,49 +45,111 @@
         <div class="col-10">
             <div class="container mt-4">
                 <h1 class="mb-4">Admin panel</h1>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="bg-light card-title">About user</h5>
-                        <div class="table-responsive">
-                            <table class="table table-striped">
-                                <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Username</th>
-                                    <th>Surname</th>
-                                    <th>Age</th>
-                                    <th>Email</th>
-                                    <th>Role</th>
-                                    <th>Edit</th>
-                                    <th>Delete</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="user : ${users}">
-                                    <td th:text="${user.id}"></td>
-                                    <td th:text="${user.username}"></td>
-                                    <td th:text="${user.surname}"></td>
-                                    <td th:text="${user.age}"></td>
-                                    <td th:text="${user.email}"></td>
-                                    <td th:text="${user.getAllUserRoles()}"></td>
-                                    <td>
-                                        <button class="btn btn-primary" data-bs-toggle="modal"
-                                                data-bs-target="#editUserModal">Edit
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger" data-bs-toggle="modal"
-                                                data-bs-target="#deleteUserModal">Delete
-                                        </button>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
+
+                <!-- Tabs Navigation -->
+                <ul class="nav nav-tabs" id="adminTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="userListTab" data-bs-toggle="tab" href="#userList" role="tab"
+                           aria-controls="userList" aria-selected="true">Users table</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="addUserTab" data-bs-toggle="tab" href="#addUser" role="tab"
+                           aria-controls="addUser" aria-selected="false">New user</a>
+                    </li>
+                </ul>
+
+                <!-- Tabs Content -->
+                <div class="tab-content mt-4" id="adminTabContent">
+
+                    <!-- User List Tab -->
+                    <div class="tab-pane fade show active" id="userList" role="tabpanel" aria-labelledby="userListTab">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="bg-light card-title">All users</h5>
+                                <div class="table-responsive">
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Username</th>
+                                            <th>Surname</th>
+                                            <th>Age</th>
+                                            <th>Email</th>
+                                            <th>Role</th>
+                                            <th>Edit</th>
+                                            <th>Delete</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr th:each="user : ${users}">
+                                            <td th:text="${user.id}"></td>
+                                            <td th:text="${user.username}"></td>
+                                            <td th:text="${user.surname}"></td>
+                                            <td th:text="${user.age}"></td>
+                                            <td th:text="${user.email}"></td>
+                                            <td th:text="${user.getAllUserRoles()}"></td>
+                                            <td>
+                                                <button class="btn btn-primary" data-bs-toggle="modal"
+                                                        data-bs-target="#editUserModal">Edit
+                                                </button>
+                                            </td>
+                                            <td>
+                                                <button class="btn btn-danger" data-bs-toggle="modal"
+                                                        data-bs-target="#deleteUserModal">Delete
+                                                </button>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
+
+                    <!-- Add User Tab -->
+                    <div class="tab-pane fade" id="addUser" role="tabpanel" aria-labelledby="addUserTab">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="bg-light card-title">Add New User</h5>
+                                <form th:action="@{/admin/new/}" method="POST">
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Username</label>
+                                        <input type="text" id="username" class="form-control" name="username" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="surname" class="form-label">Surname</label>
+                                        <input type="text" id="surname" class="form-control" name="surname" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="age" class="form-label">Age</label>
+                                        <input type="number" id="age" class="form-control" name="age" min="0" max="120"
+                                               step="1" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="email" class="form-label">Email</label>
+                                        <input type="email" id="email" class="form-control" name="email" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="role" class="form-label">Role</label>
+                                        <select id="role" class="form-select" name="role" required>
+                                            <option value="1">ADMIN</option>
+                                            <option value="2">USER</option>
+                                        </select>
+                                    </div>
+                                    <div class="mb-3">
+                                        <button type="submit"
+                                                class="btn btn-success d-flex justify-content-center w-100">Add new user
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
@@ -182,18 +244,6 @@
     </div>
 </div>
 
-<!-- Кнопки для действий -->
-<div class="mt-3">
-    <form th:action="@{/admin/new/}" method="get" style="display:inline;">
-        <button type="submit" class="btn btn-primary btn-sm">Add new User</button>
-    </form>
-    <form th:action="@{/logout}" method="post" style="display:inline;">
-        <button type="submit" class="btn btn-secondary btn-sm">LogOut</button>
-    </form>
-    <form th:action="@{/user}" method="get" style="display:inline;">
-        <button type="submit" class="btn btn-info btn-sm">Show my info</button>
-    </form>
-</div>
 </div>
 </body>
 </html>
