--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,55 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New User</title>
+    <title>Admin panel</title>
+
+    <!-- Логотип -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-<div class="container mt-5">
-    <h1 class="mb-4">Create New User</h1>
-    <form th:action="@{/admin/new/}" method="post">
-        <div class="mb-3">
-            <label for="username" class="form-label">Username:</label>
-            <input type="text" id="username" name="username" class="form-control" required>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-text text-white">
+            <b th:text="${user.username}"></b> with roles: <span th:text="${user.getAllUserRoles()}"></span>
+        </span>
+        <form th:action="@{/logout}" method="post" class="d-inline">
+            <button type="submit" class="btn btn-dark">Logout</button>
+        </form>
+    </div>
+</nav>
+<!-- Add User Tab -->
+<div class="tab-pane fade" id="addUser" role="tabpanel" aria-labelledby="addUserTab">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="bg-light card-title">Add New User</h5>
+            <form th:action="@{/admin/new/}" method="POST">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" id="username" class="form-control" name="username" required>
+                </div>
+                <div class="mb-3">
+                    <label for="surname" class="form-label">Surname</label>
+                    <input type="text" id="surname" class="form-control" name="surname" required>
+                </div>
+                <div class="mb-3">
+                    <label for="age" class="form-label">Age</label>
+                    <input type="number" id="age" class="form-control" name="age" min="0" max="120"
+                           step="1" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" id="email" class="form-control" name="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" id="password" class="form-control" name="password"
+                           required>
+                </div>
+                <div class="mb-3">
+                    <label for="role" class="form-label">Role</label>
+                    <select id="role" class="form-select" name="role" required>
+                        <option value="1">ADMIN</option>
+                        <option value="2">USER</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <button type="submit"
+                            class="btn btn-success d-flex justify-content-center w-100">Add new user
+                    </button>
+                </div>
+            </form>
         </div>
-
-        <div class="mb-3">
-            <label for="surname" class="form-label">Surname:</label>
-            <input type="text" id="surname" name="surname" class="form-control" required>
-        </div>
-
-        <div class="mb-3">
-            <label for="age" class="form-label">Age:</label>
-            <input type="text" id="age" name="age" class="form-control" required>
-        </div>
-
-        <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" id="email" name="email" class="form-control" required>
-        </div>
-
-        <div class="mb-3">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" id="password" name="password" class="form-control" required>
-        </div>
-
-        <div class="mb-3">
-            <label for="roles" class="form-label">Role:</label>
-            <select name="role" class="form-select" multiple id="roles" style="height: 100px;">
-                <option value="1">Admin</option>
-                <option value="2">User</option>
-            </select>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Create</button>
-        <a href="/admin/" class="btn btn-secondary ms-2">Back to Users List</a>
-    </form>
+    </div>
 </div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
